Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-0.10
-
None
Description
If both sides of the connection specify just the ANONYMOUS mech, then the connection open does not complete.
The frame trace for the connection attempt:
./test-runner unit_tests.connection.APITest.test_sasl_callbacks
unit_tests.connection.APITest.test_sasl_callbacks ...........................................................................................[0x228c1e0]: -> SASL
[0x228c1e0]:0 -> @sasl-init(65) [mechanism=:ANONYMOUS, initial-response=b"anonymous@t530.localdomain"]
[0x228c1e0]: -> AMQP
[0x228c1e0]:0 -> @open(16) [container-id="test-container-2", channel-max=32767]
[0x2475800]: <- SASL
[0x2475800]:0 <- @sasl-init(65) [mechanism=:ANONYMOUS, initial-response=b"anonymous@t530.localdomain"]
[0x2475800]:Authenticated user: anonymous with mechanism ANONYMOUS
[0x2475800]: <- AMQP
[0x2475800]:0 <- @open(16) [container-id="test-container-2", channel-max=32767]
[0x2475800]: -> SASL
[0x2475800]:0 -> @sasl-mechanisms(64) [sasl-server-mechanisms=@PN_SYMBOL[:ANONYMOUS]]
[0x2475800]:0 -> @sasl-outcome(68) [code=0]
[0x2475800]: -> AMQP
[0x2475800]:0 -> @open(16) [container-id="test-container-1", channel-max=32767]
[0x228c1e0]: <- SASL
[0x228c1e0]:0 <- @sasl-mechanisms(64) [sasl-server-mechanisms=@PN_SYMBOL[:ANONYMOUS]]
[0x228c1e0]:0 <- @sasl-outcome(68) [code=0]
<hangs waiting for connection to open>
The server's open frame is never processed by the client, though it has been received 'on the wire'.
Attachments
Issue Links
- relates to
-
PROTON-334 SASL Implementation for Proton C
- Closed