PROTON-929: Fix for ANONYMOUS cut through - Previously client wasn't reading anything after the SASL interchange